@@ -1,3 +1,8 @@
+2010-07-13  Francois Chouinard  <fchouinard@gmail.com>
+
+	* src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java (.updateExperiment): Added check for empty experiment
+	* src/org/eclipse/linuxtools/tmf/trace/TmfTrace.java (.updateTraceData): Added check for empty trace
+
 2010-07-12  Francois Chouinard  <fchouinard@gmail.com>
 
 	* src/org/eclipse/linuxtools/tmf/signal/TmfTraceClosedSignal.java: New file.
